feat(scheduled-jobs): Add comprehensive scheduled jobs management system
- Implement ScheduledJob database model with Prisma migration
- Create ScheduleJobManager to handle job scheduling and tracking
- Add database-backed scheduling system with PostgreSQL and Redis integration
- Implement job key generation, active state management, and error tracking
- Update workflow service to support scheduled job lifecycle
- Add README documentation explaining scheduled jobs architecture
- Modify package.json to include job-related scripts
- Remove legacy ScheduleJobManager from services directory
- Update index.ts to use new ScheduledJobManager implementation
Introduces a robust, persistent scheduling mechanism for workflow executions with comprehensive error handling and state management.

--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,8 @@
     "nodes:status": "tsx src/scripts/node-cli.ts status",
     "nodes:activate-all": "tsx src/scripts/node-cli.ts activate-all",
     "nodes:deactivate-all": "tsx src/scripts/node-cli.ts deactivate-all",
+    "jobs:migrate": "tsx src/scripts/migrate-scheduled-jobs.ts",
+    "jobs:test": "tsx test-scheduled-jobs-db.ts",
     "compose:up": "docker-compose up -d",
     "compose:down": "docker-compose down",
     "compose:logs": "docker-compose logs -f"
