--- a/backend/package.json
+++ b/backend/package.json
@@ -62,10 +62,8 @@
     "node-fetch": "^2.7.0",
     "openai": "^6.2.0",
     "pg": "^8.16.3",
-    "prisma": "^5.6.0",
     "redis": "^4.6.10",
     "socket.io": "^4.7.4",
-    "typescript": "^5.2.2",
     "uuid": "^8.3.2",
     "vm2": "^3.9.19",
     "winston": "^3.11.0",
@@ -86,9 +84,11 @@
     "@types/supertest": "^2.0.16",
     "@types/uuid": "^10.0.0",
     "jest": "^29.7.0",
+    "prisma": "^5.6.0",
     "supertest": "^6.3.4",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
-    "tsx": "^4.1.4"
+    "tsx": "^4.1.4",
+    "typescript": "^5.2.2"
   }
 }
