feat(custom-nodes): Enhance Node Marketplace search and installation functionality
- Add support for checking installed custom node package status
- Improve marketplace search with package installation tracking
- Add installation status and version comparison for marketplace packages
- Implement error handling for package loading after installation
- Create .gitkeep for custom-nodes directory to preserve folder structure
- Update .gitignore to exclude custom node files except .gitkeep
- Enhance logging for package installation and loading processes
- Add flexible search filters for marketplace node discovery

--- a/.gitignore
+++ b/.gitignore
@@ -114,3 +114,7 @@ Thumbs.db
 
 # Prisma
 prisma/migrations/
+
+# Custom nodes - keep folder only
+backend/custom-nodes/*
+!backend/custom-nodes/.gitkeep
