--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,7 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@radix-ui/react-visually-hidden": "^1.2.3",
     "@types/multer": "^2.0.0",
+    "@types/uuid": "^10.0.0",
     "@xyflow/react": "^12.8.6",
     "adm-zip": "^0.5.16",
     "axios": "^1.6.2",
@@ -61,6 +62,7 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^8.3.2",
     "zod": "^3.25.76",
     "zustand": "^4.5.7"
   },
