--- a/frontend/package.json
+++ b/frontend/package.json
@@ -47,6 +47,8 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "cron-parser": "^4.9.0",
+    "date-fns": "^2.30.0",
     "lucide-react": "^0.292.0",
     "multer": "^2.0.2",
     "next-themes": "^0.4.6",
