--- a/frontend/package.json
+++ b/frontend/package.json
@@ -64,6 +64,7 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "tw-animate-css": "^1.4.0",
     "uuid": "^8.3.2",
     "zod": "^3.25.76",
     "zustand": "^4.5.7"
@@ -85,7 +86,7 @@
     "eslint-plugin-react-refresh": "^0.4.4",
     "jsdom": "^27.0.0",
     "postcss": "^8.4.31",
-    "tailwindcss": "^3.3.5",
+    "tailwindcss": "^3.4.18",
     "typescript": "^5.2.2",
     "vite": "^4.5.0",
     "vitest": "^0.34.6"
